--- a/src/Views/RepositoryConfigure.axaml
+++ b/src/Views/RepositoryConfigure.axaml
@@ -260,7 +260,7 @@
                   <TextBlock Margin="0,12,0,0" Text="{DynamicResource Text.Configure.CommitMessageTemplate.Content}"/>
                   <v:CommitMessageTextBox Margin="0,4,0,0" Height="150" Text="{Binding Content, Mode=TwoWay}"/>
                   <TextBlock Margin="0,2,0,0"
-                             Text="{DynamicResource Text.Configure.CommitMessageTemplate.Explanation}"
+                             Text="{DynamicResource Text.Configure.CommitMessageTemplate.BuiltinVars}"
                              Foreground="{DynamicResource Brush.FG2}"
                              TextWrapping="Wrap"/>
                 </StackPanel>
