--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -14,7 +14,7 @@
                     Title="{DynamicResource Text.InteractiveRebase}"
                     Width="1080" Height="720"
                     WindowStartupLocation="CenterOwner">
-  <Grid RowDefinitions="Auto,Auto,*,Auto">
+  <Grid RowDefinitions="Auto,Auto,*,Auto,Auto">
     <!-- TitleBar -->
     <Grid Grid.Row="0" Height="28" IsVisible="{Binding !#ThisControl.UseSystemWindowFrame}">
       <Border Background="{DynamicResource Brush.TitleBar}"
@@ -38,7 +38,7 @@
     </Grid>
 
     <!-- Operation Information -->
-    <Grid Grid.Row="1" ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,*" Margin="8">
+    <Grid Grid.Row="1" ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,*" Margin="8">
       <TextBlock Grid.Column="0" Text="{DynamicResource Text.InteractiveRebase.Target}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
       <Path Grid.Column="1" Width="14" Height="14" Margin="8,0,0,0" Data="{StaticResource Icons.Branch}"/>
       <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Current.FriendlyName}" Margin="8,0,0,0"/>
@@ -47,8 +47,6 @@
       <Path Grid.Column="4" Width="14" Height="14" Margin="8,0,0,0" Data="{StaticResource Icons.Commit}"/>
       <TextBlock Grid.Column="5" Classes="primary" VerticalAlignment="Center" Text="{Binding On.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="8,0,0,0"/>
       <TextBlock Grid.Column="6" VerticalAlignment="Center" Text="{Binding On.Subject}" Margin="4,0,0,0" TextTrimming="CharacterEllipsis"/>
-
-      <CheckBox Grid.Column="7" Content="{DynamicResource Text.InteractiveRebase.AutoStash}" IsChecked="{Binding AutoStash, Mode=TwoWay}" Margin="16,0,0,0"/>
     </Grid>
 
     <!-- Body -->
@@ -198,16 +196,22 @@
 
     <!-- Options -->
     <Grid Grid.Row="3" ColumnDefinitions="*,Auto,Auto" Margin="8,0,8,8">
-      <ProgressBar x:Name="Running"
-                   Grid.Column="0"
-                   Margin="0,0,32,0"
-                   Background="{DynamicResource Brush.FG2}"
-                   Foreground="{DynamicResource Brush.Accent}"
-                   Minimum="0"
-                   Maximum="100"
-                   IsVisible="False"/>
+      <CheckBox Grid.Column="0"
+                Content="{DynamicResource Text.InteractiveRebase.AutoStash}"
+                VerticalAlignment="Center"
+                IsChecked="{Binding AutoStash, Mode=TwoWay}"/>
       <Button Grid.Column="1" Classes="flat primary" MinWidth="80" Content="{DynamicResource Text.Start}" Click="OnStartJobs"/>
       <Button Grid.Column="2" Classes="flat" Margin="8,0,0,0" MinWidth="80" Content="{DynamicResource Text.Cancel}" Click="CloseWindow"/>
     </Grid>
+
+    <!-- Progress -->
+    <ProgressBar x:Name="Running"
+                 Grid.Row="4"
+                 Margin="8,0,8,12"
+                 Background="{DynamicResource Brush.FG2}"
+                 Foreground="{DynamicResource Brush.Accent}"
+                 Minimum="0"
+                 Maximum="100"
+                 IsVisible="False"/>
   </Grid>
 </v:ChromelessWindow>
