feature: support `.issuetracker` file
Beforehand issue trackers could be defined in the repository
configuration only.  They were stored in the `.git` directory.  As a
consequence each SourceGit user had to configure issue trackers for
himself.

Now additional issue tracker rules are read from an existing
`.issuetracker` file (#1424).  An issue tracker configured by a user has
a higher priority than an issue tracker read from `.issuetracker`.

This allows to share issue trackers between team members.

SourceGit does not (yet?) write into the `.issuetracker` file.  But
using `git config` allows the user to easily construct issue tracker
rules for the `.issuetracker` file, where even the escaping of the
backslash in '#(\d+)' is done correctly.

A `.issuetracker` file was added to SourceGit.  It was created by
executing the following commands in a bash shell, where the current
directory was the repository root:

```bash
cat >.issuetracker <<EOF
# Integration with Issue Tracker
#
# (note that '\' need to be escaped).

EOF
git config set --file .issuetracker issuetracker.GitHub.regex '#(\d+)'
git config set --file .issuetracker issuetracker.GitHub.url \
  'https://github.com/sourcegit-scm/sourcegit/issues/$1'
```

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -142,6 +142,7 @@
                                               LinkForeground="{DynamicResource Brush.Link}"
                                               Subject="{Binding Subject}"
                                               IssueTrackerRules="{Binding $parent[v:Histories].IssueTrackerRules}"
+                                              SharedIssueTrackerRules="{Binding $parent[v:Histories].SharedIssueTrackerRules}"
                                               FontWeight="{Binding FontWeight}"
                                               Opacity="{Binding Opacity}"/>
                   </Grid>
