--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -74,6 +74,10 @@
   <x:String x:Key="Text.BranchCM.ResetToSelectedCommit" xml:space="preserve">重設 ${0}$ 至 ${1}$...</x:String>
   <x:String x:Key="Text.BranchCM.Tracking" xml:space="preserve">切換上游分支...</x:String>
   <x:String x:Key="Text.BranchCompare" xml:space="preserve">分支比較</x:String>
+  <x:String x:Key="Text.BranchTree.Local" xml:space="preserve">本機</x:String>
+  <x:String x:Key="Text.BranchTree.Remote" xml:space="preserve">遠端</x:String>
+  <x:String x:Key="Text.BranchTree.Tracking" xml:space="preserve">上游分支</x:String>
+  <x:String x:Key="Text.BranchTree.URL" xml:space="preserve">遠端網址</x:String>
   <x:String x:Key="Text.BranchUpstreamInvalid" xml:space="preserve">追蹤上游分支不存在或已刪除!</x:String>
   <x:String x:Key="Text.Cancel" xml:space="preserve">取  消</x:String>
   <x:String x:Key="Text.ChangeCM.CheckoutFirstParentRevision" xml:space="preserve">重設檔案到上一版本</x:String>
