--- a/src/Views/BranchTree.axaml
+++ b/src/Views/BranchTree.axaml
@@ -1,7 +1,8 @@
-<UserControl xmlns="https://github.com/avaloniaui"
+﻿<UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:m="using:SourceGit.Models"
              xmlns:c="using:SourceGit.Converters"
              xmlns:v="using:SourceGit.Views"
              xmlns:vm="using:SourceGit.ViewModels"
@@ -35,8 +36,53 @@
       <DataTemplate DataType="vm:BranchTreeNode">
         <Border Background="Transparent"
                 PointerPressed="OnNodePointerPressed"
-                ToolTip.Tip="{Binding Tooltip}"
+                ToolTip.Tip="{Binding Backend}"
                 ToolTip.Placement="Right">
+          <Border.DataTemplates>
+            <DataTemplate DataType="m:Branch">
+              <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal">
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.Branch}"/>
+                  <TextBlock FontWeight="Bold" VerticalAlignment="Center" Margin="8,0,0,0" Text="{Binding FriendlyName}"/>
+                  <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" VerticalAlignment="Center" IsVisible="{Binding IsLocal}">
+                    <TextBlock Text="{DynamicResource Text.BranchTree.Local}" FontSize="12" Classes="primary" Margin="4,1" Foreground="White" VerticalAlignment="Center"/>
+                  </Border>
+                  <Border Background="Gray" Margin="4,0,0,0" CornerRadius="4" VerticalAlignment="Center" IsVisible="{Binding !IsLocal}">
+                    <TextBlock Text="{DynamicResource Text.BranchTree.Remote}" FontSize="12" Classes="primary" Margin="4,1" Foreground="White" VerticalAlignment="Center"/>
+                  </Border>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal"
+                            Margin="0,8,0,0"
+                            IsVisible="{Binding Upstream, Converter={x:Static StringConverters.IsNotNullOrEmpty}}">
+                  <TextBlock Classes="info_label"
+                             HorizontalAlignment="Left" VerticalAlignment="Center"
+                             Text="{DynamicResource Text.BranchTree.Tracking}"/>
+
+                  <TextBlock Margin="6,0,0,0"
+                             Text="{Binding Upstream, Mode=OneWay, Converter={x:Static c:StringConverters.ToFriendlyUpstream}}"/>
+                </StackPanel>
+              </StackPanel>
+            </DataTemplate>
+
+            <DataTemplate DataType="m:Remote">
+              <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal">
+                  <Path Width="12" Height="12" Data="{StaticResource Icons.Remote}"/>
+                  <TextBlock FontWeight="Bold" VerticalAlignment="Center" Text="{Binding Name}" Margin="8,0,0,0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,8,0,0">
+                  <TextBlock Classes="info_label"
+                             HorizontalAlignment="Left" VerticalAlignment="Center"
+                             Text="{DynamicResource Text.BranchTree.URL}"/>
+
+                  <TextBlock Margin="6,0,0,0" Foreground="{DynamicResource Brush.Link}" Text="{Binding URL, Mode=OneWay}"/>
+                </StackPanel>
+              </StackPanel>
+            </DataTemplate>
+          </Border.DataTemplates>
+          
           <Grid Height="24"
                 Margin="{Binding Depth, Converter={x:Static c:IntConverters.ToTreeMargin}}"
                 ColumnDefinitions="16,*">
