feature: auto-open commit message editor
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/InteractiveRebase.axaml
+++ b/src/Views/InteractiveRebase.axaml
@@ -58,6 +58,7 @@
                                     ItemsSource="{Binding Items}"
                                     SelectionMode="Single"
                                     SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                                    SelectionChanged="OnRowsSelectionChanged"
                                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                                     ScrollViewer.VerticalScrollBarVisibility="Auto"
                                     Grid.IsSharedSizeScope="True">
